--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@chakra-ui/react": "^3.28.1",
     "@emotion/react": "^11.14.0",
+    "axios": "^1.13.2",
+    "jwt-decode": "^4.0.0",
     "next": "^16.0.1",
     "next-themes": "^0.4.6",
+    "nookies": "^2.5.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0"
