--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.28.1",
     "@emotion/react": "^11.14.0",
+    "@stripe/stripe-js": "^8.4.0",
     "axios": "^1.13.2",
     "jwt-decode": "^4.0.0",
     "next": "^16.0.1",
